Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-deployment
  namespace: expense-app

spec:

  replicas: 2
  revisionHistoryLimit: 5

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: expense

  template:
    metadata:
      name: expense-app-pod
      labels:
        app: expense

    spec:        
      containers:
        - name: expense-App
          image: registry.gitlab.com/vaibhavc54/Expenses-Tracker-WebApp:${IMAGE_TAG} 
          ports:
          - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500"
              memory: "512Gi"

      imagePullSecrets:
      - name: gitlab-creds
