Kubernetes/deployment_service.yml
apiVersion: v1
kind: Service
metadata:
  name: expence-service
  name:space: expense-app

spec:
  selector:
    app: expence
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
