Kubernetes/mysql_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: expense-app

spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
